[package]
name = "xip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
git2 = "0.15"
git-url-parse = "0.4"
ureq = "2.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
clap = {version = "4", features = ["derive"]}