[package]
name = "xip"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
git2 = "0.20"
git-url-parse = "0.4"
ureq = "3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_derive = "1"
serde_yaml = "0.9"
clap = {version = "4", features = ["derive"]}
